--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 MixedModels = "ff71e718-51f3-5ec2-a782-8ffcbfa3c316"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
